--- a/.ci/pipeline.yml
+++ b/.ci/pipeline.yml
@@ -42,14 +42,14 @@ jobs:
     public: true
     serial: true
     plan:
-      - get: repository
+      - get: spring-boot-service
         trigger: true
         passed: [test]
       - task: mvn-package
         file: "spring-boot-service/.ci/tasks/mvn-package.yml"
       - put: spring-boot-service-docker-repository
         params:
-          build: repository-out
+          build: spring-boot-service-out
 
   - name: deploy
     public: true
